Almost fixed website spacing

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@
 /*About Section*/
 .main{
   background-color: #131313;
-  padding: 25rem 0 10rem;
+  padding: 6rem 0 2rem;
 }
 
 .main_container{
@@ -277,7 +277,6 @@
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  margin-bottom: 32px;
 }
 
 .main_content h2{
@@ -292,9 +291,10 @@
   -moz-text-fill-color: transparent;
 }
 
-.main_content p{
+.main_content li{
   margin-top: 1rem;
-  font-size: 2rem;
+  margin-left: 1rem;
+  font-size: 1.4rem;
   font-weight: 700;
 }
 
@@ -346,8 +346,8 @@
 
 .main_img--card{
   margin: 10px;
-  height: 500px;
-  width: 500px;
+  height: 400px;
+  width: 400px;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
@@ -461,8 +461,20 @@
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  margin-bottom: 5rem;
-  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+
+.work h2 {
+  background-color: #ff8177;
+  background-image: linear-gradient(to right, #ff0844 0%, #ffb199 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  margin-bottom: 2rem;
+  font-size: 2rem;
 }
 
 /* .symp{
@@ -490,8 +502,9 @@
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
   margin: auto;
-  height: 1300px;
-  width: 1300px;
+  height: 1000px;
+  width: 1000px;
+  margin-top: 15rem;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
@@ -565,7 +578,7 @@
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  margin-bottom: 20rem;
+  margin-bottom: 2rem;
   font-size: 2.5rem;
 }
 
@@ -616,7 +629,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 20rem 0;
+  padding: 2rem 0;
 }
 
 .projects h1 {
@@ -674,14 +687,14 @@
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   font-size: 2rem;
   text-align: center;
 }
 
 .projects_card p {
   text-align: center;
-  margin-top: 24px;
+  margin-top: 1px;
   font-size: 20px;
 }
 
